--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
 Flask==0.10.1
 Flask-Bootstrap==3.3.0.1
 Flask-SQLAlchemy==2.0
+Flask-WTF==0.10.3
 Jinja2==2.7.3
 MarkupSafe==0.23
 SQLAlchemy==0.9.8
+WTForms==2.0.1
 Werkzeug==0.9.6
+cffi==0.8.6
+cryptography==0.7
+enum34==1.0.4
 itsdangerous==0.24
+pyOpenSSL==0.14
+pyasn1==0.1.7
+pycparser==2.10
+python-etcd==0.3.2
+requests==2.5.0
+six==1.8.0
+urllib3==1.10
 wsgiref==0.1.2
